Fixing overflow on smaller screen

--- a/styles.css
+++ b/styles.css
@@ -261,4 +261,7 @@ footer {
   h2 {
     font-size: 7vw;
   }
+  html {
+    overflow-x: hidden;
+  }
 }
